# vol-geotiff

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  CTestConfig.cmake  LOCAL_TEST_RESULTS.md  README.md
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  code-quality.yml  comprehensive-test.yml  docs.yml  release.yml
scripts/: setup-precommit.ps1
src/: CMakeLists.txt  template_vol_connector.c  template_vol_connector.h
test/: CMakeLists.txt  sample_new.tif  test_geotiff_read.c  test_h5tools.sh  test_ncdump.sh  vol_plugin.c
